--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Здесь мы инициализируем проект!</h1>
+  <h1>Привет Снова!</h1>
   <img src="images/logo.png" alt="">
 </body>
 
